<resources>
    <string name="app_name">GO Stadium</string>

    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>

    <string name="action_my_favorite">Mes favoris</string>
    <string name="action_settings">Paramètres</string>

    <string name="title_activity_navigation_test">NavigationTestActivity</string>
    <string name="title_news">News</string>
    <string name="title_search">Recherche</string>
    <string name="title_location">Géolocalisation</string>
    <string name="title_share">Partage</string>
    <string name="title_login">Authentification</string>
    <string name="title_register">Inscription</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_account">Mon compte</string>
    <string name="menu_favorites">Mes favoris</string>
    <string name="menu_manage">Paramètres</string>
    <string name="menu_help">Aide</string>
    <string name="menu_logout">Déconnexion</string>

    <string name="copyright">Copyright © GO Stadium Team 2018</string>

    <!-- String related to Faebook -->
    <string name="facebook_app_id">1917853465196569</string>
    <string name="fb_login_protocol_scheme">fb1917853465196569</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_club_details">ClubDetailsActivity</string>
    <string name="title_favoris">Favoris</string>
    <string name="title_description">Description</string>
    <string name="content_description">Icône de géolocalisation</string>
    <string name="title_next_match">Prochain match</string>
    <string name="title_last_result">Dernier résultat</string>
    <string name="title_calendar">Calendrier</string>
    <string name="title_pending_matchs">Matchs en cours</string>
    <string name="title_incoming_matchs">Matchs à venir</string>
    <string name="title_results">Résultats</string>
</resources>
