<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="58dp"
    tools:context=".Activities.ClubDetailsActivity">

    <ScrollView
        android:id="@+id/sv_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title_pending_matchs"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_pendingMatchs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title_incoming_matchs"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_incomingMatchs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title_results"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_last_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
